--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
-    "bootstrap": "4.1.2",
+    "bootstrap": "~4.1.2",
     "core-js": "^2.4.1",
     "font-awesome": "4.7.0",
     "font-awesome-webpack": "0.0.5-beta.2",
